fonts fix, pixel perfect spacing for colors & type

--- a/restart/bc-styles.scss
+++ b/restart/bc-styles.scss
@@ -15,13 +15,20 @@ body {
 		color: $blue;
 	}
 
+	&-title {
+		font-size: 3.25rem;
+	}
 	&-section-title {
 		text-transform: capitalize;
-		margin-top: 1.25rem;
+		margin-top: 1rem;
+		font-size: 3rem;
+		line-height: 1.3;
 	}
 
 	&-subhead {
 		text-transform: capitalize;
+		line-height: 1.9;
+		margin: 0 0 0.6rem;
 	}
 	&-border {
 		border: 1px solid $blue;
@@ -57,7 +64,8 @@ body {
 
 .font-stacks {
 	p {
-		margin: 0;
-		font-size: 2rem;
+		margin: 0px 0 20px;
+		font-size: 2.23rem;
+		line-height: 0.7;
 	}
 }
