--- a/restart/main.scss
+++ b/restart/main.scss
@@ -14,6 +14,9 @@ $tints: 100, 95, 90, 85, 80, 75, 70, 65, 60, 55, 50, 45, 40, 35, 30, 25, 20, 15,
 	--red: #{$red};
 	--white: #{$white};
 	--gray: #{$gray};
+
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 // fonts
